--- a/README.Rmd
+++ b/README.Rmd
@@ -110,8 +110,7 @@ Enriching agricultural farms with forest plantations has potential to enhance th
 ```
 
 ```{r, message=FALSE, warning=FALSE, fig.height = 3, fig.width = 4}
-# Note: Not all of the following packages are automatically installed. 
-# Manual installation could be required.
+
 library(optimLanduse)
 library(readxl)
 library(ggplot2)
@@ -163,7 +162,7 @@ result$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1 : 6) 
   guides(fill=guide_legend(title = ""))
 ```
 
-The here optimized farm composition corresponds to figure 3 ($f_u=2$) in Gosling et al (2020). It can be seen that the farm composition that best fulfills all 10 indicators (i.e. the multi-criterial portfolio) practically only covers silvopasture and forest. The averaged observed farm portfolio in 2018 was, however, mainly composed of pasture and cropland and only small share of forest (circa 15 %). 
+The here optimized farm composition corresponds to figure 3 ($f_u=2$) in Gosling et al (2020). It can be seen that the farm composition that best fulfills all 10 indicators (i.e. the multi-functional portfolio) practically only covers silvopasture and forest. The averaged observed farm portfolio in 2018 was, however, mainly composed of pasture and cropland and only small share of forest (circa 15 %). 
 
 ### Calculating the Portfolio Performances of the Optimized *optimLanduse* Object
 
@@ -197,7 +196,7 @@ ggplot(performance$scenarioTable,
            vjust = -1)
 ```
 
-Looking at the performances of this multi-criterial farm reveals, which indicators restrict the result. Here, the indicators 1 (financial stability), 3 (investment costs) and 8 (meeting household needs) are very close to each other. It can be followed that the portfolio is apparently restricted by these 3 indicators. In the worst-performing scenarios, these 3 indicators are commonly the worst performing indicators with the maximum distance of $\beta$. Or in other words, the guaranteed performance $1-\beta$ (lowestPerformance) is defined by one the these indicators. It can be interpreted that these 3 indicators are be worthwhile to consider in order to find strategy that developes the land-cover composition in a desired way. According to Gosling et al. (2020), this results were expectable, since the need for short-term liquidity mainly drives decisions of the farms of smallholder farmer. Intermediate-term economic success is not relevant until consumption of the household is secured. While the performances of indicator 1 differ relatively strong among the scenarios, the indicators 3 and 8 are similar in each scenario. It thus may be interesting to investigate the reasons for this particular worst-performing scenario of indicator 1.
+Looking at the performances of this multi-functional farm reveals, which indicators restrict the result. Here, the indicators 1 (financial stability), 3 (investment costs) and 8 (meeting household needs) are very close to each other. It can be followed that the portfolio is apparently restricted by these 3 indicators. In the worst-performing scenarios, these 3 indicators are commonly the worst performing indicators with the maximum distance of $\beta$. Or in other words, the guaranteed performance $1-\beta$ (lowestPerformance) is defined by one the these indicators. It can be interpreted that these 3 indicators are be worthwhile to consider in order to find strategy that developes the land-cover composition in a desired way. According to Gosling et al. (2020), this results were expectable, since the need for short-term liquidity mainly drives decisions of the farms of smallholder farmer. Intermediate-term economic success is not relevant until consumption of the household is secured. While the performances of indicator 1 differ relatively strong among the scenarios, the indicators 3 and 8 are similar in each scenario. It thus may be interesting to investigate the reasons for this particular worst-performing scenario of indicator 1.
 
 ```{r, message=FALSE, warning=FALSE, fig.height = 5, fig.width = 10}
 performance$beta
@@ -244,11 +243,11 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
         legend.position = "bottom")
 ```
 
-Solving the porfolio under increasing assumptions for the untertainty levels (uValue, respectively $f_u$ in equation 4 (Husmann et al, n.d.) gives sensitivity of the land-cover compositions towards increasing aversion of risk of the farmer. The higher the uncertainty level, the higher the standard error of the mean (Gosling et al. use the s.e.m.; any other uncertainty measure will also be possible) of the indicator consequences on the land-cover options. Here, the composition of land-cover alternatives is quite stable. Only the small proportion of crops (circa 10 %) is interchanged with small proportions of pasture and plantation. Forest and silvopasture are practically not affected by the uncertainty level. The plot corresponds to figure 3 in Gosling et al. (2020).
+Solving the porfolio under increasing assumptions for the untertainty levels (uValue, respectively $f_u$ in equation 4 (Husmann et al, n.d.)) gives sensitivity of the land-cover compositions towards increasing aversion of risk of the farmer. The higher the uncertainty level, the higher the standard error of the mean (Gosling et al. use the s.e.m.; any other uncertainty measure is also possible) of the indicator consequences on the land-cover options. Here, the composition of land-cover alternatives is quite stable. Only the small proportion of crops (circa 10 %) is interchanged with small proportions of pasture and plantation. Forest and silvopasture are practically not affected by the uncertainty level. The plot corresponds to figure 3 in Gosling et al. (2020).
 
 ### Leave-Indicators-Out-Analysis to Investigate the Indicators' Sensitivity
 
-The sensitivity of the portfolio towards indicators or groups of indicators can be straightforwardly analysed by either leaving indicators of interest out and interpreting the response of the portfolio or, alternatively, by adding indicators of interest. Typical way to conduct sensitivity analyses is thus to compare distinct and independent optimization results.
+The sensitivity of the portfolio towards indicators or groups of indicators can be straightforwardly analysed by either leaving indicators of interest out and interpreting the response of the portfolio or, alternatively, by adding indicators of interest. Typical way to conduct sensitivity analyses is thus to compare distinctly and independently optimization results.
 
 ```{r, fig.height = 3, fig.width = 4, warning=FALSE}
 dat_socioeconomic <- dat[dat$indicator != "Protecting soil resources" & dat$indicator !="Protecting water supply",]
@@ -276,7 +275,7 @@ result_socioeconomic$landUse %>% gather(key = landCoverOption, value = landCover
   guides(fill=guide_legend(title=""))
 ```
 
-First leave-indicator-out example considers socio-economic indicators only (see also figure 5 of Gosling et al. (2020)). Expectedly, it corresponds to the above shown multiobjective portfolio, as all indicators relevant for the solution of the multiobjective portfolio are captured also in the socio-economic group.
+First leave-indicator-out example considers socio-economic indicators only (see also figure 5 of Gosling et al. (2020)). Expectedly, it corresponds to the above shown multio-functional portfolio, as all indicators relevant for the solution of the multi-functional portfolio are captured also in the socio-economic group.
 
 ```{r}
 performance_socioeconomic <- calcPerformance(result_socioeconomic)
@@ -321,7 +320,7 @@ result_ecologic$landUse %>% gather(key = landCoverOption, value = landCoverShare
   guides(fill=guide_legend(title=""))
 ```
 
-The ecological indicator group, as the second example for leave-indicators-out analysis, leads to a portfolio covering forests only (corresponds to figure 5 of Gosling et al. (2020)). It can be followed that all contributions of all other land-cover alternatives in all scenarios (even the optimistic outcomes) to the ecological indicators are lower then the contribution of forest. This portfolio differs even more from the actually observed portfolio then the above shown multiobjective portfolio. Also the ecological indicators are apparently not sufficient to approximate the farmers' actual inceptions.
+The ecological indicator group, as the second example for leave-indicators-out analysis, leads to a portfolio covering forests only (corresponds to figure 5 of Gosling et al. (2020)). It can be followed that all contributions of all other land-cover alternatives in all scenarios (even the optimistic ones) to the ecological indicators are lower then the contribution of forest. This portfolio differs even more from the actually observed portfolio then the above shown multi-functional portfolio. Also the ecological indicators are therefore apparently not sufficient to approximate the farmers' inceptions.
 
 ### Immediate  Economic Success
 
@@ -353,11 +352,11 @@ result_short$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1
   guides(fill = guide_legend(title = ""))
 ```
 
-The third example considers the prospective relevant indicators of the farmers only. Corresponding to figure 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate the immediate economic success. And indeed this portfolio best reflects the portfolio observed in Eastern Panama. Following, these indicators best reflect the farmers' goals and perceptions in this area. The difference between this portfolio and the societal desired multiobjective portfolio highlight the requirements a land-cover alternative must fulfill to meet the farmers needs and goals. The silvopasture as defined in Gosling et al. (2020) may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher then long-term profit and economic stability, pasture outperforms silvopasture in the realistic scenario. Policies or development plans may consider these indicators as key elements when promoting a landscape development towards multifunctional landscapes.
+The third example considers the prospective relevant indicators of the farmers only. Corresponding to figure 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate the immediate economic success. Indeed, this portfolio best reflects the portfolio observed in Eastern Panama. Followingly, these indicators best reflect the farmers' goals and perceptions in Eastern Panama. The difference between this portfolio and the desired multi-functional portfolio highlight the requirements a land-cover alternative must fulfill to meet the farmers needs and goals. The silvopasture as defined in Gosling et al. (2020) may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher then long-term profit and economic stability, pasture outperforms silvopasture in the realistic scenario. Policies or development plans may consider these indicators as key elements when promoting a landscape development towards multifunctional landscapes.
 
 ### The use of fixDistance
 
-Till now, the ...
+It can be advantageous to define distinct uncertainties for the calculation of the distances to the maximum achievable level (the reference) $d_{iu}$ (equation 3 in Husmann et al. (n.d.)) and the actual distances under a certain land-cover composition $R_{iu}$ (equation 5 in Husmann et al. (n.d.), see also equation 9). The broadenes uncertainty space allows for a broader state space of the distances $d_{ij}$, which usually leads to smoother transitions when the uncertainty values are raised. Disadvantage is that the distances cannot be interpreted straightforwardly any more. The different uncertainty spaces considered in the denominator and in the counter of equation 3 (Husmann et al., n.d.) to not normalize the distance to \{0, 1\} any more.
 
 
 ```{r, fig.height = 3, fig.width = 4}
