--- a/README.Rmd
+++ b/README.Rmd
@@ -46,10 +46,7 @@ The R package **optimLanduse** provides functions for easy and systematic applic
 <a name="3. Input und Output">Package structure</a>
 </h3>
 
-This chapter provides a brief overview over the package functions (Fig. 1). For detailed information about methodological background, functions, and workflow please refer to Husmann et al. (n.d.) listed in the <a href="#7. Suggested">suggested citation</a> section. We also refer the reader to the respective help pages of the package for more information.
-*CP: Der letzte Satz kommt etwas unvermittelt. Meint ihr hier: The package requires the lpSolveApi function of the lpSolveApi package oder so in der Art? "comes from" ist n.m.E. genglisch*
-*VVG: Habe es hier gelöscht und einfach in Zeile 95 verfrachtet. Da wo wir bei coefObjective beschreiben, dass lpSolve genutzt wird.*
-
+This chapter provides a brief overview over the package functions (Fig. 1). For detailed information about methodological background, functions, and workflow please also refer to Husmann et al. (n.d.). We further refer the reader to the respective help pages of the package for more information.
 
 <p align="center">
 <img width="781.6" height="452" src="./man/figures/flowchart.png">
@@ -60,15 +57,12 @@ This chapter provides a brief overview over the package functions (Fig. 1). For 
 
 The *initScenario()* function combines the user settings with the data into an *optimLanduse*-object ready for solving. The following input data are required:
 
--   *coefTable*: The package is only capable of processing a long-oriented type of data structure (Table 1). All combinations of land-cover (landUse) alternatives and indicators have to be listed vertically. Each row must contain the average expectation, the uncertainty, and the direction of the respective land-cover and indicator combination. The column names of the table must follow the expected nomenclature displayed below. You also find this format in the built-in example tables **exampleGosling.xlsx** or **exampleEmpty.xlsx**. All further columns will be dropped if passed.
+-   *coefTable*: The package is only capable of processing a long-oriented type of data structure (Table 1). All combinations of land-cover (landUse) alternatives and indicators have to be listed vertically. Each row must contain the average expectation, the uncertainty, and the direction of the respective land-cover and indicator combination. The column names of the table must follow the expected nomenclature displayed below. You also find this format in the built-in example tables **exampleGosling.xlsx** or **exampleEmpty.xlsx**. The help files of the *exampleData()* and *initScenario()* functions contain more details regarding the required data format. Also an empty template incl. the predefined headings can be accessed via *exampleData("exampleEmpty.xlsx")*. All further columns will be dropped if passed.
 
 *Table 1: Example of the data set from Gosling et al. (2020) to illustrate the required data structure.*
 <p align="center">
 <img width="673.4" height="298.2" src="./man/figures/exampleGraphic.png">
 </p>
-
-
-\| See the help files of the *exampleData()* and *initScenario()* functions for more details. An empty template (incl. predefined headings) \| can be accessed via the *exampleData("exampleEmpty.xlsx")* function. <br>
 
 -   *uValue*: The argument for the uncertainty level ($f_u$, equation 4 in Husmann et al. (n.d.)). A higher uValue reflects a higher risk aversion of the decision maker. See the help file of the *initScenario* function for more details.
 
@@ -78,16 +72,16 @@ The *initScenario()* function combines the user settings with the data into an *
 
 #### Solver and List with results
 
-The *solveScenario()* function requires the initialized *optimLanduse*-object and only a few optional solver-specific arguments. As the solving process has no stochastic element, the calculation times depend almost entirely on the number of digits calculated.
+The *solveScenario()* function takes the initialized *optimLanduse*-object and only a few optional solver-specific arguments.
 
--   *digitsPrecision*: Provides the only possibility for the user to influence the calculation time. As the solving process has no stochastic element, the calculation times depend almost entirely on the number of digits calculated.
+-   *digitsPrecision*: Provides the only possibility for the user to influence the calculation time. As the solving process has no stochastic element, the calculation times depend practically on the number of digits calculated only.
 
--   *lowerBound* & *upperBound*: Optional bounds for the land-cover options. The lower bound must be 0 or a vector with lower bounds in the dimension of the land-cover options. The upper bound, respectively, 1 or a vector with upper bounds in the dimension of the land-cover options. Choosing 0 and 1 (the defaults) as boundaries for all decision variables, means that no land-cover alternative is forced into the portfolio and that no land-cover alternative is assigned a maximum.
+-   *lowerBound* & *upperBound*: Optional bounds for the land-cover alternatives. The lower bound must be 0 or a vector with lower bounds in the dimension of the number of land-cover alternatives. The upper bound, respectively, 1 or a vector with upper bounds. Choosing 0 and 1 (the defaults) as boundaries for all decision variables, means that no land-cover alternative is forced into the portfolio and that no land-cover alternative is assigned a maximum.
 
-The resulting *list with results* contains different Information of the optimization model. First the information of the *initScenario()* function are displayed again in this list. These include:
+The returned *list with results* contains different Information of the optimization model. First the information of the *initScenario()* function are displayed again in this list. These include:
 
 -   *scenarioSettings*: Data frame with *uValue* and *optimisticRule* used.
--   *scenarioTable*: Data frame with one row for each combination of worst-case and best-case outcomes of all indicators (thus the number of scenarios $N_S$ in Husmann et al (n.d.)). The columns contain certain relevant calculation steps of the optimization program. *adjSem\** are the uncertainty adjusted indicators ($R_{liu}$ in Husmann et al. (n.d.)). *minAdjSem* are the minimal uncertainty adjusted indicators $min(R_{liu})$ and $max(R_{liu})$ the maximal uncertainty adjusted indicators. diffAdjSem are the range between these uncertainties adjusted indicators $\delta_{\text{min,max}_{iu}}$.
+-   *scenarioTable*: Data frame with one row for each combination of worst-case and best-case outcomes of all indicators (thus the number of rows equals the number of scenarios $N_S$ in Husmann et al (n.d.)). The columns contain relevant calculation steps of the optimization program. *adjSem\** are the uncertainty adjusted indicators ($R_{liu}$ in Husmann et al. (n.d.)). *minAdjSem* are the minimal uncertainty adjusted indicators $min(R_{liu})$ and $max(R_{liu})$ the maximal uncertainty adjusted indicators. diffAdjSem are the range between these uncertainties adjusted indicators $\delta_{\text{min,max}_{iu}}$.
 -   *coefObjective*: The optimization program is translated into a linear program with $N_L$ (number of land-cover options) coefficients for the inner solution. The inner solution is solved using the *lpSolveAPI()* function of the **lpSolveApi** package. *coefObjective* is the data frame that contains these coefficients.
 -   *coefConstraing*: A data frame with the respective constraints for the inner solution solved by *lpsolveAPI()*.
 -   *distances*: The distance of each scenario to its own theoretically best-achievable contribution (reference). See equation 3 in Husmann et al. (n.d.).
@@ -105,7 +99,7 @@ This is followed by a summary of the results of the optimization:
 <a name="5. Beispielhafte Anwendung">Example application</a>
 </h3>
 
-We here present the basic workflow on a literature example. Aim of this chapter is to introduce the functionality of the packages' functions and to explain the relevant in- and output on the example of a use-case in Eastern Panama. The data of this study is accessible in the *Appendix A* of Gosling et al. (2020) and is also firmly integrated into the **optimLanduse** package. It can be accessed via *exampleData("exampleGosling.xlsx")*. The data integrated in the package comes already in the expected *optimLanduse* format, such that it can be used without any data processing.
+We here present the basic workflow on a literature example. Aim of this chapter is to introduce the functionality of the packages' functions and to explain the relevant in- and output on the example of a use-case in Eastern Panama. The data of this study is accessible in the *Appendix A* of Gosling et al. (2020) and is also firmly integrated into the **optimLanduse** package. It can be accessed via *exampleData("exampleGosling.xlsx")*. The data integrated in the package comes already in the required *optimLanduse* format, such that it can be used without any data processing.
 
 Enriching agricultural farms with agroforestry has been promoted as a means to enhance ecosystem functioning of farms in Panama, while maintaining important economic functions. Gosling et al. (2020) therefore used the optimization model presented here to understand smallholder farmers' perceptions and values of agroforestry systems. They identified 10 relevant indicators for a predefined set of land-cover alternatives, which represent the farmers' goals (such as long and short-term income or labor demand, as well as carbon and water regulation). A survey with local farmers provided the empirical basis in the form of the farmer's expectations on the indicator performance of each land-cover (arithmetic mean) and its uncertainties (using the standard error of the mean across the survey's respondents). Descriptions of the land-cover alternatives and indicators can be found in tables 1 and 2 in Gosling et al. (2020).
 
