--- a/README.Rmd
+++ b/README.Rmd
@@ -15,39 +15,47 @@ knitr::opts_chunk$set(echo = TRUE)
 
 <ul>
 <li>
-<a href="#1. Einleitung">Introduction</a>
+<a href="#1. Einleitung">1. Introduction</a>
 </li>
 <li>
-<a href="#3. Input und Output">Detailed description of the functions' in- and outputs</a>
+<a href="#3. Input und Output">2. Detailed description of the functions' in- and outputs</a>
 </li>
 <li>
-<a href="#5. Beispielhafte Anwendung">Example application</a>
+<a href="#5. Beispielhafte Anwendung">3. Example application</a>
 </li>
 <li>
-<a href="#6. Erweiterte Anwendung">Sophisticated application</a>
+<a href="#6. Erweiterte Anwendung">4. Sophisticated application</a>
 </li>
 <li>
-<a href="#7. Suggested">Suggested citation</a>
+<a href="#7. Suggested">5. Suggested citation</a>
 </li>
 <li>
-<a href="#8. Literatur">Literature</a>
+<a href="#8. Literatur">6. Literature</a>
 </li>
 </ul>
 
 <h3>
-<a name="1. Einleitung">Introduction</a>
+<a name="1. Einleitung">1. Introduction</a>
 </h3>
 
 When managing ecosystems the question is how to simultaneously combat biodiversity loss and maintain ecosystem functioning while increasing human welfare. Designing multifunctional landscapes means deciding upon the composition and configuration of land-cover types, given that landscape patterns drive the landscape`s ecological value and its ability to satisfy societal demands. Land-cover allocation models, particularly optimization approaches, have proven helpful in revealing trade-offs between multiple objectives and services provided by different land-cover compositions.
 
 The R package **optimLanduse** provides functions for easy and systematic applications of the robust multiobjective land-cover composition optimization approach of Knoke et al. (2016). It includes tools to determine the land-cover composition that best balances the multiple functions and services a landscape can provide and tools for deeper understanding and visualizing the contributions of the distinct indicators. The method has been developed and applied in a series of studies before. You find some examples in the <a href="#8. Literatur">literature</a> section. The methodological background of the approach can e.g. be found in Knoke et al. (2016) and Husmann et al. (n.d). We here refer to the nomenclature of Husmann et al. (n.d.). The package opens the approach of Knoke et al. (2016) to the community of landscape planners and provides opportunities for systematic or batch applications. To further enhance this, we have designed a shiny dashboard for the package to get a quick idea of its functionalities and the modeling philosophy of the overall approach, see <http://134.76.17.50/optimlanduse_shiny/>.
 
+
 <h3>
-<a name="3. Input und Output">Package structure</a>
+<a name="3. Input und Output">2. Package structure</a>
 </h3>
 
 This chapter provides a brief overview over the package functions (Fig. 1). For detailed information about methodological background, functions, and workflow please also refer to Husmann et al. (n.d.). We further refer the reader to the respective help pages of the package for more information.
 
+The stable version of the package can be installed using the CRAN server. The development version can be found on the GitHub project page.
+
+```{r, results='hide',message=FALSE, warning=FALSE, fig.height = 3, fig.width = 4, eval=FALSE}
+# If not already installed
+install.packages("optimLanduse")
+```
+ 
 <p align="center">
 <img width="781.6" height="452" src="./man/figures/flowchart.png">
 </p>
@@ -96,7 +104,7 @@ This is followed by a summary of the results of the optimization:
 -   *calcPerfomance()*: Attaches the portfolio performances of all indicators and scenarios as data frame. The data can be used for straightforward visualization of the performance (e.g. Fig. 3). The performance is defined as the distance to the maximum achievable level for each indicator and uncertainty scenario.
 
 <h3>
-<a name="5. Beispielhafte Anwendung">Example application</a>
+<a name="5. Beispielhafte Anwendung">3. Example application</a>
 </h3>
 
 We here present the basic workflow on a literature example. Aim of this chapter is to introduce the functionality of the packages' functions and to explain the relevant in- and output on the example of a use-case in Eastern Panama. The data of this study is accessible in the *Appendix A* of Gosling et al. (2020) and is also firmly integrated into the **optimLanduse** package. It can be accessed via *exampleData("exampleGosling.xlsx")*. The data integrated in the package comes already in the required *optimLanduse* format, such that it can be used without any data processing.
@@ -104,11 +112,6 @@ We here present the basic workflow on a literature example. Aim of this chapter 
 Enriching agricultural farms with agroforestry has been promoted as a means to enhance ecosystem functioning of farms in Panama, while maintaining important economic functions. Gosling et al. (2020) therefore used the optimization model presented here to understand smallholder farmers' perceptions and values of agroforestry systems. They identified 10 relevant indicators for a predefined set of land-cover alternatives, which represent the farmers' goals (such as long and short-term income or labor demand, as well as carbon and water regulation). A survey with local farmers provided the empirical basis in the form of the farmer's expectations on the indicator performance of each land-cover (arithmetic mean) and its uncertainties (using the standard error of the mean across the survey's respondents). Descriptions of the land-cover alternatives and indicators can be found in tables 1 and 2 in Gosling et al. (2020).
 
 ### Installing **optimLanduse**, Loading Required Packages and Importing the Data
-
-```{r, results='hide',message=FALSE, warning=FALSE, fig.height = 3, fig.width = 4}
-# If not already installed
-# install.packages("optimLanduse", repos = "https://ftp.gwdg.de/pub/misc/cran/")
-```
 
 ```{r, message=FALSE, warning=FALSE, fig.height = 3, fig.width = 4}
 
@@ -239,7 +242,7 @@ Further elaborating the packages' results (Table 2) indeed reveals that indicato
 
 
 <h3>
-<a name="6. Erweiterte Anwendung">Sophisticated application</a>
+<a name="6. Erweiterte Anwendung">4. Sophisticated application</a>
 </h3>
 
 ### Batch Analysis: Solving Multiple Uncertainty Values
@@ -462,13 +465,13 @@ It can be seen that the land-cover allocation transition under raising uncertain
 
 
 <h3>
-<a name="7. Suggested">Suggested citation </a>
+<a name="7. Suggested">5. Suggested citation </a>
 </h3>
 
 Husmann, K., von Groß, V., Fuchs J.M., Bödeker, K. (2022): optimLanduse: Robust Land-Use Optimization. R package version 1.1.0. <https://CRAN.R-project.org/package=optimLanduse>.
 
 <h3>
-<a name="8. Literatur">Literature</a>
+<a name="8. Literatur">6. Literature</a>
 </h3>
 
 Gosling, E., Reith, E., Knoke T., Paul, C. (2020): A goal programming approach to evaluate agroforestry systems in Eastern Panama<em>Journal of Environmental Management</em> **261**. <https://doi.org/10.1016/j.jenvman.2020.110248>
